--- a/src/Storage.Net.Net4/Storage.Net.Net45.csproj
+++ b/src/Storage.Net.Net4/Storage.Net.Net45.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Storage.Net</RootNamespace>
-    <AssemblyName>Storage.Net.Net45</AssemblyName>
+    <AssemblyName>Storage.Net</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -22,7 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
-    <DocumentationFile>..\..\out\lib\net45\Storage.Net.Net45.xml</DocumentationFile>
+    <DocumentationFile>..\..\out\lib\net45\Storage.Net.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
