--- a/storage.nuspec
+++ b/storage.nuspec
@@ -1,28 +1,27 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
    <metadata>
-      <id>Aloneguid.Support</id>
-      <version>1.6.2</version>
+      <id>Storage.Net</id>
+      <version>1.0.0</version>
       <authors>Ivan Gavryliuk</authors>
       <owners>Ivan Gavryliuk</owners>
-      <projectUrl>https://github.com/aloneguid/support</projectUrl>
+      <projectUrl>https://github.com/aloneguid/storage</projectUrl>
       <requireLicenseAcceptance>false</requireLicenseAcceptance>
       <description>
-         .NET support library with useful functions which are missing or not easily accessible in the standard .NET framework.
+         .NET storage abstractions with impelementations for local on premise, Azure and more
       </description>
       <summary>
-         The library tagets .NET 4.5 framework.
-         It is also available as a Portable version which targets .NET 4.5, Windows 8, Windows Phone 8.1, Windows Phone Silverlight 8, Xamarin (Android and iOS).
+         To follow
       </summary>
       <copyright>Copyright (c) 2015 by Ivan Gavryliuk</copyright>
       <tags>Common</tags>
       <dependencies>
-         <dependency id="Newtonsoft.Json" version="7.0" />
+         <dependency id="Aloneguid.Support" version="1.6" />
       </dependencies>
    </metadata>
    <files>
-      <file src="out\lib\net45\Aloneguid.Support.Net45.*" target="lib\net45"/>
+      <file src="out\lib\net45\Storage.Net.*" target="lib\net45"/>
 
-      <file src="out\lib\portable\Aloneguid.Support.Portable.*" target="lib\portable-net45+sl5+wp8+win8"/>
+      <file src="out\lib\portable\Storage.Net.*" target="lib\portable-net45+sl5+wp8+win8"/>
    </files>
 </package>
