--- a/src/Storage.Net.Net4/Storage.Net.Net45.csproj
+++ b/src/Storage.Net.Net4/Storage.Net.Net45.csproj
@@ -105,6 +105,7 @@
     </Compile>
     <Compile Include="Blob\Files\DirectoryFilesBlobStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queue\FileMessageQueue.cs" />
     <Compile Include="Table\Files\CsvFileTableStorage.cs" />
   </ItemGroup>
   <ItemGroup>
