mostly XML comments

--- a/src/Storage.Net.Net45.Azure/Storage.Net.Net45.Azure.csproj
+++ b/src/Storage.Net.Net45.Azure/Storage.Net.Net45.Azure.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Blob\AzureBlobStorage.cs" />
     <Compile Include="Blob\AzureStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queue\ServiceBus\AzureServiceBusQueueReceiver.cs" />
     <Compile Include="Queue\ServiceBus\ServiceBusConverter.cs" />
     <Compile Include="Queue\Storage\AzureStorageMessageQueue.cs" />
     <Compile Include="Queue\ServiceBus\AzureServiceBusQueuePublisher.cs" />
