--- a/storage.net45.azure.nuspec
+++ b/storage.net45.azure.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
    <metadata>
       <id>Storage.Net.WindowsAzure</id>
-      <version>2.0.0</version>
+      <version>2.0.0-alpha</version>
       <authors>Ivan Gavryliuk</authors>
       <owners>Ivan Gavryliuk</owners>
       <projectUrl>https://github.com/aloneguid/storage</projectUrl>
@@ -16,7 +16,7 @@
       <copyright>Copyright (c) 2015 by Ivan Gavryliuk</copyright>
       <tags>Common</tags>
       <dependencies>
-         <dependency id="Storage.Net" version="1.0"/>
+         <dependency id="Storage.Net" version="2.0-alpha"/>
          <dependency id="Aloneguid.Support" version="2.0" />
          <dependency id="WindowsAzure.Storage" version="6.2"/>
       </dependencies>
