--- a/storage.net45.azure.nuspec
+++ b/storage.net45.azure.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
    <metadata>
       <id>Storage.Net.WindowsAzure</id>
-      <version>2.0.1-alpha</version>
+      <version>2.0.2-alpha</version>
       <authors>Ivan Gavryliuk</authors>
       <owners>Ivan Gavryliuk</owners>
       <projectUrl>https://github.com/aloneguid/storage</projectUrl>
@@ -22,6 +22,6 @@
       </dependencies>
    </metadata>
    <files>
-      <file src="out\lib\azure\Storage.Net.Net45.Azure.*" target="lib\net45"/>
+      <file src="out\lib\azure\Storage.Net.Azure.*" target="lib\net45"/>
    </files>
 </package>
