--- a/src/Storage.Net.Net45.Azure/Storage.Net.Net45.Azure.csproj
+++ b/src/Storage.Net.Net45.Azure/Storage.Net.Net45.Azure.csproj
@@ -93,6 +93,7 @@
   <ItemGroup>
     <Compile Include="Blob\AzureBlobStorage.cs" />
     <Compile Include="Blob\AzureStorage.cs" />
+    <Compile Include="Messaging\ServiceBus\TopicHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Messaging\ServiceBus\AzureServiceBusQueueReceiver.cs" />
     <Compile Include="Messaging\ServiceBus\AzureServiceBusTopicReceiver.cs" />
