--- a/storage.nuspec
+++ b/storage.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
    <metadata>
       <id>Storage.Net</id>
-      <version>2.0.0</version>
+      <version>2.1.0</version>
       <authors>Ivan Gavryliuk</authors>
       <owners>Ivan Gavryliuk</owners>
       <projectUrl>https://github.com/aloneguid/storage</projectUrl>
@@ -11,7 +11,7 @@
          .NET storage abstractions with impelementations for local on premise, Azure and more
       </description>
       <summary>
-         To follow
+         Storage abstractions for .NET including Blobs, Queues, Tables and more.
       </summary>
       <copyright>Copyright (c) 2015 by Ivan Gavryliuk</copyright>
       <tags>Common</tags>
