+ blob storage DownloadToStream throws consistent exception

--- a/src/Storage.Net.Net4/Storage.Net.Net45.csproj
+++ b/src/Storage.Net.Net4/Storage.Net.Net45.csproj
@@ -61,6 +61,9 @@
     <Compile Include="..\Storage.Net.Portable\Blob\IBlobStorage.cs">
       <Link>Blob\IBlobStorage.cs</Link>
     </Compile>
+    <Compile Include="..\Storage.Net.Portable\ErrorCode.cs">
+      <Link>ErrorCode.cs</Link>
+    </Compile>
     <Compile Include="..\Storage.Net.Portable\FileFormats\CsvFormat.cs">
       <Link>FileFormats\CsvFormat.cs</Link>
     </Compile>
