S3 client throws consistent exception when object doesn't exist!

--- a/src/Storage.Net.Net45.Aws/Storage.Net.Net45.Aws.csproj
+++ b/src/Storage.Net.Net45.Aws/Storage.Net.Net45.Aws.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Blob\AwsS3BlobStorage.cs" />
+    <Compile Include="Blob\AwsS3BlobStorageExternalStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
