--- a/storage.net45.aws.nuspec
+++ b/storage.net45.aws.nuspec
@@ -16,8 +16,10 @@
       <copyright>Copyright (c) 2016 by Ivan Gavryliuk</copyright>
       <tags>Common</tags>
       <dependencies>
-         <dependency id="Storage.Net" version="2.0"/>
-         <dependency id="Aloneguid.Support" version="2.0" />
+         <dependency id="Storage.Net" version="2.2"/>
+         <dependency id="Aloneguid.Support" version="2.2" />
+         <dependency id="AWSSDK.Core" version="3.1"/>
+         <dependency id="AWSSDK.S3" version="3.1"/>
       </dependencies>
    </metadata>
    <files>
