--- a/src/Storage.Net.Tests/packages.config
+++ b/src/Storage.Net.Tests/packages.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Config.Net" version="1.2.0" targetFramework="net46" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net46" />
+  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net46" />
+  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net46" />
+  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net46" />
   <package id="NUnit" version="3.0.1" targetFramework="net46" />
   <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net46" />
+  <package id="System.Spatial" version="5.7.0" targetFramework="net46" />
+  <package id="WindowsAzure.Storage" version="6.2.0" targetFramework="net46" />
 </packages>
