--- a/src/Storage.Net.Tests/packages.config
+++ b/src/Storage.Net.Tests/packages.config
@@ -7,7 +7,7 @@
   <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net46" />
   <package id="NUnit" version="3.0.1" targetFramework="net46" />
-  <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net46" />
+  <package id="NUnit3TestAdapter" version="3.0.8-ctp-8" targetFramework="net46" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net46" />
   <package id="WindowsAzure.Storage" version="6.2.0" targetFramework="net46" />
 </packages>
