- add SqlFilter to azure service bus topic - add references to SqLite for future local implementations

--- a/src/Storage.Net.Net4/Storage.Net.Net45.csproj
+++ b/src/Storage.Net.Net4/Storage.Net.Net45.csproj
@@ -112,6 +112,7 @@
     <Compile Include="..\Storage.Net.Portable\Table\TableRowId.cs">
       <Link>Table\TableRowId.cs</Link>
     </Compile>
+    <Compile Include="Application\SqliteDriver.cs" />
     <Compile Include="Blob\Files\DirectoryFilesBlobStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue\Files\DiskMessagePublisherReceiver.cs" />
