--- a/src/Storage.Net.Net4/Storage.Net.Net45.csproj
+++ b/src/Storage.Net.Net4/Storage.Net.Net45.csproj
@@ -42,8 +42,8 @@
     <AssemblyOriginatorKeyFile>..\storage.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Aloneguid.Support.Net45, Version=1.0.0.0, Culture=neutral, PublicKeyToken=8dea52f811e261ef, processorArchitecture=MSIL">
-      <HintPath>..\packages\Aloneguid.Support.2.2.1.0\lib\net45\Aloneguid.Support.Net45.dll</HintPath>
+    <Reference Include="Aloneguid.Support, Version=1.0.0.0, Culture=neutral, PublicKeyToken=8dea52f811e261ef, processorArchitecture=MSIL">
+      <HintPath>..\packages\Aloneguid.Support.2.3.0.3\lib\net45\Aloneguid.Support.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
