--- a/src/Storage.Net.Portable/Storage.Net.Portable.csproj
+++ b/src/Storage.Net.Portable/Storage.Net.Portable.csproj
@@ -60,8 +60,8 @@
     <Compile Include="Table\TableRowId.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Aloneguid.Support.Portable, Version=1.0.0.0, Culture=neutral, PublicKeyToken=8dea52f811e261ef, processorArchitecture=MSIL">
-      <HintPath>..\packages\Aloneguid.Support.2.2.1.0\lib\portable-net45+sl5+wp8+win8\Aloneguid.Support.Portable.dll</HintPath>
+    <Reference Include="Aloneguid.Support, Version=1.0.0.0, Culture=neutral, PublicKeyToken=8dea52f811e261ef, processorArchitecture=MSIL">
+      <HintPath>..\packages\Aloneguid.Support.2.3.0.3\lib\portable-net45+wp80+win8+wpa81+dnxcore50\Aloneguid.Support.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
