--- a/src/Storage.Net.Tests.Integration/packages.config
+++ b/src/Storage.Net.Tests.Integration/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Aloneguid.Support" version="2.3.0.149" targetFramework="net46" />
+  <package id="Aloneguid.Support" version="2.3.0.168" targetFramework="net46" />
   <package id="Config.Net" version="1.2.0.125" targetFramework="net46" />
-  <package id="LogMagic" version="1.3.2.118" targetFramework="net46" />
+  <package id="LogMagic" version="2.0.0.178" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
-  <package id="NUnit" version="3.4.0" targetFramework="net46" />
+  <package id="NUnit" version="3.4.1" targetFramework="net46" />
+  <package id="NUnit3TestAdapter" version="3.4.0" targetFramework="net46" />
 </packages>
