change integration test library to dll

--- a/src/Storage.Net.Tests.Integration/Storage.Net.Tests.Integration.csproj
+++ b/src/Storage.Net.Tests.Integration/Storage.Net.Tests.Integration.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{497BC511-863F-4707-8DF5-D4F6FEA338A0}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Storage.Net.Tests.Integration</RootNamespace>
     <AssemblyName>Storage.Net.Tests.Integration</AssemblyName>
