--- a/src/Storage.Net.Tests.Integration/packages.config
+++ b/src/Storage.Net.Tests.Integration/packages.config
@@ -3,7 +3,13 @@
   <package id="Aloneguid.Support" version="2.3.0.168" targetFramework="net46" />
   <package id="Config.Net" version="1.2.0.125" targetFramework="net46" />
   <package id="LogMagic" version="2.0.0.179" targetFramework="net46" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net46" />
+  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net46" />
+  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net46" />
+  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="NUnit" version="3.4.1" targetFramework="net46" />
   <package id="NUnit3TestAdapter" version="3.4.0" targetFramework="net46" />
+  <package id="System.Spatial" version="5.7.0" targetFramework="net46" />
+  <package id="WindowsAzure.Storage" version="7.1.2" targetFramework="net46" />
 </packages>
