--- a/src/Storage.Net.Tests/packages.config
+++ b/src/Storage.Net.Tests/packages.config
@@ -6,8 +6,13 @@
   <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net46" />
   <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
-  <package id="NUnit" version="3.4.1" targetFramework="net46" />
-  <package id="NUnit3TestAdapter" version="3.4.1" targetFramework="net46" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net46" />
   <package id="WindowsAzure.Storage" version="7.2.0" targetFramework="net46" />
+  <package id="xunit" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
+  <package id="xunit.assert" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.core" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net46" />
 </packages>
