--- a/src/src/Storage.Net.Amazon.Aws/project.json
+++ b/src/src/Storage.Net.Amazon.Aws/project.json
@@ -21,7 +21,7 @@
 
    "dependencies": {
       "NETStandard.Library": "1.6.0",
-      "Storage.Net": "1.0.0-*"
+      "Storage.Net": "3.0.0"
    },
 
    "frameworks": {
